--- a/index.html
+++ b/index.html
@@ -180,11 +180,11 @@
     </div>
 
     <div class="hidden md:flex space-x-6">
-      <a href="#" class="text-white hover:text-gray-200 font-medium">Home</a>
-      <a href="#" class="text-white hover:text-gray-200 font-medium">Shop</a>
-      <a href="#" class="text-white hover:text-gray-200 font-medium">Contact</a>
-      <a href="#" class="text-white hover:text-gray-200 font-medium">Blog</a>
-      <a href="#" class="text-white hover:text-gray-200 font-medium">About</a>
+      <a href="index.html" class="text-white hover:text-gray-200 font-medium border-b-2 border-white">Home</a>
+      <a href="shop.html" class="text-white hover:text-gray-200 font-medium">Shop</a>
+      <a href="contact.html" class="text-white hover:text-gray-200 font-medium">Contact</a>
+      <a href="blog.html" class="text-white hover:text-gray-200 font-medium">Blog</a>
+      <a href="about.html" class="text-white hover:text-gray-200 font-medium">About</a>
     </div>
 
     <div class="hidden md:flex space-x-4">
@@ -206,11 +206,11 @@
   </nav>
 
   <div id="mobile-menu" class="md:hidden hidden px-6 pb-4 space-y-2 bg-white shadow">
-    <a href="#" class="block text-[#B22222] hover:text-red-700 font-medium">Home</a>
-    <a href="#" class="block text-[#B22222] hover:text-red-700 font-medium">Shop</a>
-    <a href="#" class="block text-[#B22222] hover:text-red-700 font-medium">Contact</a>
-    <a href="#" class="block text-[#B22222] hover:text-red-700 font-medium">Blog</a>
-    <a href="#" class="block text-[#B22222] hover:text-red-700 font-medium">About</a>
+    <a href="index.html" class="block text-[#B22222] hover:text-red-700 font-medium font-bold">Home</a>
+    <a href="shop.html" class="block text-[#B22222] hover:text-red-700 font-medium">Shop</a>
+    <a href="contact.html" class="block text-[#B22222] hover:text-red-700 font-medium">Contact</a>
+    <a href="blog.html" class="block text-[#B22222] hover:text-red-700 font-medium">Blog</a>
+    <a href="about.html" class="block text-[#B22222] hover:text-red-700 font-medium">About</a>
     <div class="pt-4 border-t">
       <a href="#" class="block text-[#B22222] hover:underline font-medium">Login</a>
       <a href="#" class="block text-center bg-[#B22222] text-white py-2 mt-2 rounded hover:bg-red-900 transition">Sign Up</a>
@@ -229,7 +229,7 @@
           <p class="hero-description">
             Discover amazing deals and get more for your money with our special offer!
           </p>
-          <button class="hero-button">Discover More</button>
+          <button class="hero-button" onclick="window.location.href='shop.html'">Discover More</button>
         </div>
       </div>
 
@@ -243,7 +243,7 @@
           <p class="hero-description">
             Unlock incredible savings on your next purchase. Limited time offer!
           </p>
-          <button class="hero-button">Shop Now</button>
+          <button class="hero-button" onclick="window.location.href='shop.html'">Shop Now</button>
         </div>
       </div>
     </div>
@@ -263,56 +263,56 @@
   <section class="container mx-auto px-4 py-8 mt-8">
     <h2 class="text-3xl font-bold text-center text-gray-800 mb-8">Shop by Category</h2>
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-3 gap-6">
-      <a href="#" class="block bg-white rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300 overflow-hidden group">
-        <img src="pictures\moisturizer-1.jpg" alt="Moisturizer" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
+      <a href="category.html?category=moisturizer" class="block bg-white rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300 overflow-hidden group">
+        <img src="pictures/moisturizer-1.jpg" alt="Moisturizer" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
         <div class="p-4 text-center bg-red-100">
           <h3 class="text-xl font-semibold text-gray-800">Moisturizer</h3>
         </div>
       </a>
-      <a href="#" class="block bg-white rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300 overflow-hidden group">
-        <img src="pictures\sunscreen-2.webp" alt="Sunscreen" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
+      <a href="category.html?category=sunscreen" class="block bg-white rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300 overflow-hidden group">
+        <img src="pictures/sunscreen-2.webp" alt="Sunscreen" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
         <div class="p-4 text-center bg-red-100">
           <h3 class="text-xl font-semibold text-gray-800">Sunscreen</h3>
         </div>
       </a>
-      <a href="#" class="block bg-white rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300 overflow-hidden group">
-        <img src="pictures\primer-1.webp" alt="Primer" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
+      <a href="category.html?category=primer" class="block bg-white rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300 overflow-hidden group">
+        <img src="pictures/primer-1.webp" alt="Primer" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
         <div class="p-4 text-center bg-red-100">
           <h3 class="text-xl font-semibold text-gray-800">Primer</h3>
         </div>
       </a>
-      <a href="#" class="block bg-white rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300 overflow-hidden group">
-        <img src="pictures\foundation-2.png" alt="Foundation" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
+      <a href="category.html?category=foundation" class="block bg-white rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300 overflow-hidden group">
+        <img src="pictures/foundation-2.png" alt="Foundation" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
         <div class="p-4 text-center bg-red-100">
           <h3 class="text-xl font-semibold text-gray-800">Foundation</h3>
         </div>
       </a>
-      <a href="#" class="block bg-white rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300 overflow-hidden group">
-        <img src="pictures\serum-5.jpg" alt="Serum" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
+      <a href="category.html?category=serum" class="block bg-white rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300 overflow-hidden group">
+        <img src="pictures/serum-5.jpg" alt="Serum" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
         <div class="p-4 text-center bg-red-100">
           <h3 class="text-xl font-semibold text-gray-800">Serum</h3>
         </div>
       </a>
-      <a href="#" class="block bg-white rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300 overflow-hidden group">
-        <img src="pictures\concealer-3.webp" alt="Concealer" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
+      <a href="category.html?category=concealer" class="block bg-white rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300 overflow-hidden group">
+        <img src="pictures/concealer-3.webp" alt="Concealer" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
         <div class="p-4 text-center bg-red-100">
           <h3 class="text-xl font-semibold text-gray-800">Concealer</h3>
         </div>
       </a>
-      <a href="#" class="block bg-white rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300 overflow-hidden group">
-        <img src="pictures\lipstick-1.jpg" alt="Lip Stick" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
+      <a href="category.html?category=lipstick" class="block bg-white rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300 overflow-hidden group">
+        <img src="pictures/lipstick-1.jpg" alt="Lip Stick" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
         <div class="p-4 text-center bg-red-100">
           <h3 class="text-xl font-semibold text-gray-800">Lip Stick</h3>
         </div>
       </a>
-      <a href="#" class="block bg-white rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300 overflow-hidden group">
-        <img src="pictures\lipbalm-1.jpg" alt="Lip Balm" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
+      <a href="category.html?category=lipbalm" class="block bg-white rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300 overflow-hidden group">
+        <img src="pictures/lipbalm-1.jpg" alt="Lip Balm" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
         <div class="p-4 text-center bg-red-100">
           <h3 class="text-xl font-semibold text-gray-800">Lip Balm</h3>
         </div>
       </a>
-      <a href="#" class="block bg-white rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300 overflow-hidden group">
-        <img src="pictures/category-sports.jpg" alt="Lip Tint" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
+      <a href="category.html?category=liptint" class="block bg-white rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300 overflow-hidden group">
+        <img src="pictures/liptint-1.jpg" alt="Lip Tint" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
         <div class="p-4 text-center bg-red-100">
           <h3 class="text-xl font-semibold text-gray-800">Lip Tint</h3>
         </div>
@@ -320,6 +320,46 @@
     </div>
   </section>
 
+  <footer class="bg-gray-800 text-white py-8 mt-16">
+    <div class="container mx-auto px-4">
+      <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
+        <div>
+          <div class="flex items-center space-x-3 mb-4">
+            <img src="pictures/logo.jpg" alt="Logo" class="h-10 w-auto rounded-lg" />
+            <span class="text-xl font-bold brand-name">AuraNest</span>
+          </div>
+          <p class="text-gray-400">Your trusted partner for premium beauty and skincare products.</p>
+        </div>
+        <div>
+          <h4 class="font-bold mb-4">Quick Links</h4>
+          <ul class="space-y-2">
+            <li><a href="index.html" class="text-gray-400 hover:text-white">Home</a></li>
+            <li><a href="shop.html" class="text-gray-400 hover:text-white">Shop</a></li>
+            <li><a href="about.html" class="text-gray-400 hover:text-white">About</a></li>
+            <li><a href="contact.html" class="text-gray-400 hover:text-white">Contact</a></li>
+          </ul>
+        </div>
+        <div>
+          <h4 class="font-bold mb-4">Categories</h4>
+          <ul class="space-y-2">
+            <li><a href="category.html?category=serum" class="text-gray-400 hover:text-white">Skincare</a></li>
+            <li><a href="category.html?category=foundation" class="text-gray-400 hover:text-white">Makeup</a></li>
+            <li><a href="category.html?category=lipbalm" class="text-gray-400 hover:text-white">Lip Care</a></li>
+            <li><a href="category.html?category=sunscreen" class="text-gray-400 hover:text-white">Sun Protection</a></li>
+          </ul>
+        </div>
+        <div>
+          <h4 class="font-bold mb-4">Contact Info</h4>
+          <p class="text-gray-400 mb-2">Email: info@auranest.shop</p>
+          <p class="text-gray-400 mb-2">Phone: +91 12345 67890</p>
+          <p class="text-gray-400">Address: Mumbai, India</p>
+        </div>
+      </div>
+      <div class="border-t border-gray-700 mt-8 pt-8 text-center">
+        <p class="text-gray-400">&copy; 2025 AuraNest.shop. All rights reserved. | Privacy Policy | Terms of Service</p>
+      </div>
+    </div>
+  </footer>
 
   <script>
     const menuBtn = document.getElementById('menu-btn');
