--- a/index.html
+++ b/index.html
@@ -186,7 +186,10 @@
       <a href="blog.html" class="text-white hover:text-gray-200 font-medium">Blog</a>
       <a href="about.html" class="text-white hover:text-gray-200 font-medium">About</a>
     </div>
-
+    <div class="hidden md:flex space-x-4 items-center">
+      <button id="cart-btn" class="text-white font-medium hover:underline relative">
+        Cart (<span id="cart-count">0</span>)
+      </button>
     <div class="hidden md:flex space-x-4">
       <button class="text-white font-medium hover:underline">Login</button>
       <button class="bg-white text-[#B22222] px-4 py-2 rounded hover:bg-gray-200 transition font-medium">
